fix: invisible select items in dialog

--- a/packages/react/src/style/msw-dev-tool.css
+++ b/packages/react/src/style/msw-dev-tool.css
@@ -106,7 +106,7 @@
 
 .dialog-content {
   @apply bg-white flex flex-col text-gray-900;
-  @apply fixed z-[9999];
+  @apply fixed;
   @apply top-[50%] left-[50%] -translate-x-[50%] -translate-y-[50%];
   @apply max-h-[85vh] max-w-[70vw];
   @apply overflow-hidden rounded-lg px-[1rem] py-[2rem] box-border;
